social aside spacing fix

--- a/newamericadotorg/assets/scss/base/_type.scss
+++ b/newamericadotorg/assets/scss/base/_type.scss
@@ -247,6 +247,10 @@ a {
     display: inline !important;
   }
 
+  &.block {
+    display: block !important;
+  }
+
   &.white {
     color: color(white);
     &.underlined {
