--- a/newamericadotorg/assets/scss/pages/post/body/_aside.scss
+++ b/newamericadotorg/assets/scss/pages/post/body/_aside.scss
@@ -14,7 +14,7 @@
 }
 
 
-#na-post aside{
+aside.post__social{
   font-size: 2.5rem;
   padding-top: $type-adjustment;
 }
